--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -15,53 +15,52 @@
 # set by alacritty itself.
 env:
   TERM: xterm-256color
-#
 # This value is used to set the `$TERM` environment variable for
 # each instance of Alacritty. If it is not present, alacritty will
 # check the local terminfo database and use `alacritty` if it is
 # available, otherwise `xterm-256color` is used.
 #TERM: alacritty
-#window:
-# Window dimensions (changes require restart)
-#
-# Number of lines/columns (not pixels) in the terminal. Both lines and columns
-# must be non-zero for this to take effect. The number of columns must be at
-# least `2`, while using a value of `0` for columns and lines will fall back
-# to the window manager's recommended size
-#dimensions:
-#  columns: 0
-#  lines: 0
-# Window position (changes require restart)
-#
-# Specified in number of pixels.
-# If the position is not set, the window manager will handle the placement.
-#position:
-#  x: 0
-#  y: 0
-# Window padding (changes require restart)
-#
-# Blank space added around the window in pixels. This padding is scaled
-# by DPI and the specified value is always added at both opposing sides.
-#padding:
-#  x: 0
-#  y: 0
-# Spread additional padding evenly around the terminal content.
-#dynamic_padding: false
-# Window decorations
-#
-# Values for `decorations`:
-#     - full: Borders and title bar
-#     - none: Neither borders nor title bar
-#
-# Values for `decorations` (macOS only):
-#     - transparent: Title bar, transparent background and title bar buttons
-#     - buttonless: Title bar, transparent background and no title bar buttons
-#decorations: full
-# Background opacity
-#
-# Window opacity as a floating point number from `0.0` to `1.0`.
-# The value `0.0` is completely transparent and `1.0` is opaque.
-#opacity: 1.0
+window:
+  # Window dimensions (changes require restart)
+  #
+  # Number of lines/columns (not pixels) in the terminal. Both lines and columns
+  # must be non-zero for this to take effect. The number of columns must be at
+  # least `2`, while using a value of `0` for columns and lines will fall back
+  # to the window manager's recommended size
+  #dimensions:
+  #  columns: 0
+  #  lines: 0
+  # Window position (changes require restart)
+  #
+  # Specified in number of pixels.
+  # If the position is not set, the window manager will handle the placement.
+  #position:
+  #  x: 0
+  #  y: 0
+  # Window padding (changes require restart)
+  #
+  # Blank space added around the window in pixels. This padding is scaled
+  # by DPI and the specified value is always added at both opposing sides.
+  #padding:
+  #  x: 0
+  #  y: 0
+  # Spread additional padding evenly around the terminal content.
+  #dynamic_padding: false
+  # Window decorations
+  #
+  # Values for `decorations`:
+  #     - full: Borders and title bar
+  #     - none: Neither borders nor title bar
+  #
+  # Values for `decorations` (macOS only):
+  #     - transparent: Title bar, transparent background and title bar buttons
+  #     - buttonless: Title bar, transparent background and no title bar buttons
+  #decorations: full
+  # Background opacity
+  #
+  # Window opacity as a floating point number from `0.0` to `1.0`.
+  # The value `0.0` is completely transparent and `1.0` is opaque.
+  opacity: 0.9
 # Startup Mode (changes require restart)
 #
 # Values for `startup_mode`:
@@ -880,16 +879,16 @@ schemes:
       white: "0xacb0d0"
 
 colors:
-  name: TokyoNight Storm
+  name: TokyoNight Night
   author: Folke
   # Default colors
   primary:
-    background: "0x24283b"
+    background: "0x1a1b26"
     foreground: "0xc0caf5"
 
   # Normal colors
   normal:
-    black: "0x1D202F"
+    black: "0x15161E"
     red: "0xf7768e"
     green: "0x9ece6a"
     yellow: "0xe0af68"
@@ -912,4 +911,4 @@ colors:
   indexed_colors:
     - { index: 16, color: "0xff9e64" }
     - { index: 17, color: "0xdb4b4b" }
-theme: Tokyonight_Storm
+theme: Tokyonight_Night
