--- a/.alacritty.toml
+++ b/.alacritty.toml
@@ -7,31 +7,32 @@ color = "0xdb4b4b"
 index = 17
 
 [colors.cursor]
-cursor = "0xa277ff"
+text = "0x0d1117"
+cursor = "0xc9d1d9"
 
 [colors.bright]
-black = "0x4d4d4d"
-blue = "0xa277ff"
-cyan = "0x61ffca"
-green = "0x61ffca"
-magenta = "0xa277ff"
-red = "0xff6767"
-white = "0xededed"
-yellow = "0xffca85"
+black = "0x6e7681"
+blue = "0x79c0ff"
+cyan = "0x39c5cf"
+green = "0x79c0ff"
+magenta = "0xbc8cff"
+red = "0xfdac54"
+white = "0xb1bac4"
+yellow = "0xe3b341"
 
 [colors.normal]
-black = "0x110f18"
-blue = "0xa277ff"
-cyan = "0x61ffca"
-green = "0x61ffca"
-magenta = "0xa277ff"
-red = "0xff6767"
-white = "0xedecee"
-yellow = "0xffca85"
+black = "0x484f58"
+blue = "0x58a6ff"
+cyan = "0x39c5cf"
+green = "0x58a6ff"
+magenta = "0xbc8cff"
+red = "0xec8e2c"
+white = "0xb1bac4"
+yellow = "0xd29922"
 
 [colors.primary]
-background = "0x15141b"
-foreground = "0xedecee"
+background = "0x0d1117"
+foreground = "0xc9d1d9"
 
 [env]
 TERM = "xterm-256color"
