--- a/.alacritty.toml
+++ b/.alacritty.toml
@@ -79,10 +79,10 @@ color = "#f5e0dc"
 TERM = "xterm-256color"
 
 [font]
-size = 13.0
+size = 14.0
 
 [font.normal]
-family = "UbuntuSansMono Nerd Font"
+family = "RobotoMono Nerd Font"
 
 [shell]
 program = "/home/ushinnary/.cargo/bin/nu"
