update theme for alacritty and add some scripts

--- a/alacritty/.alacritty.toml
+++ b/alacritty/.alacritty.toml
@@ -1,6 +1,6 @@
 [colors.primary]
-background = '#1E1E2E' # base
-foreground = '#CDD6F4' # text
+background = '#181616' # base
+foreground = '#c5c9c5' # text
 # Bright and dim foreground colors
 dim_foreground = '#CDD6F4' # text
 bright_foreground = '#CDD6F4' # text
@@ -38,30 +38,30 @@ background = '#A6ADC8' # subtext0
 
 # Selection colors
 [colors.selection]
-text = '#1E1E2E' # base
-background = '#F5E0DC' # rosewater
+text = '#C8C093' # base
+background = '#2D4F67' # rosewater
 
 # Normal colors
 [colors.normal]
-black = '#45475A' # surface1
-red = '#F38BA8' # red
-green = '#A6E3A1' # green
-yellow = '#F9E2AF' # yellow
-blue = '#89B4FA' # blue
-magenta = '#F5C2E7' # pink
-cyan = '#94E2D5' # teal
-white = '#BAC2DE' # subtext1
+black = '#0d0c0c' # surface1
+red = '#c4746e' # red
+green = '#8a9a7b' # green
+yellow = '#c4b28a' # yellow
+blue = '#8ba4b0' # blue
+magenta = '#a292a3' # pink
+cyan = '#8ea4a2' # teal
+white = '#C8C093' # subtext1
 
 # Bright colors
 [colors.bright]
-black = '#585B70' # surface2
-red = '#F38BA8' # red
-green = '#A6E3A1' # green
-yellow = '#F9E2AF' # yellow
-blue = '#89B4FA' # blue
-magenta = '#F5C2E7' # pink
-cyan = '#94E2D5' # teal
-white = '#A6ADC8' # subtext0
+black = '#a6a69c' # surface2
+red = '#E46876' # red
+green = '#87a987' # green
+yellow = '#E6C384' # yellow
+blue = '#7FB4CA' # blue
+magenta = '#938AA9' # pink
+cyan = '#7AA89F' # teal
+white = '#c5c9c5' # subtext0
 
 # Dim colors
 [colors.dim]
@@ -83,8 +83,8 @@ size = 12.0
 [font.normal]
 family = "RobotoMono Nerd Font"
 
-[shell]
-program = "/home/ushinnary/.cargo/bin/nu"
+#[shell]
+#program = "/home/ushinnary/.cargo/bin/nu"
 #args = ['-e', 'zellij']
 
 [window]
