--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -6,6 +6,7 @@ $hostname\
 $directory\
 $git_branch\
 $git_state\
+$git_metrics\
 $git_status\
 $docker_context\
 $package\
@@ -90,17 +91,15 @@ style = "bright-black"
 [git_status]
 format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)](218) ($ahead_behind$stashed)]($style)"
 style = "cyan"
-conflicted = "​"
-untracked = "​"
-modified = "​"
-staged = "​"
-renamed = "​"
-deleted = "​"
-stashed = "≡"
 
 [git_state]
 format = '\([$state( $progress_current/$progress_total)]($style)\) '
 style = "bright-black"
+
+[git_metrics]
+added_style = 'bold green'
+format = ' [+$added]($added_style) / [-$deleted]($deleted_style) '
+disabled = false
 
 [cmd_duration]
 format = "[$duration]($style) "
