--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -1,3 +1,8 @@
+# version: 1.0.0
+
+add_newline = true
+continuation_prompt = "[▸▹ ](dimmed white)"
+
 format = """
 $os\
 $container\
@@ -76,35 +81,122 @@ $shell\
 $line_break\
 $character"""
 
+[fill]
+symbol = ' '
+
 [directory]
-style = "blue"
+style = "fg:#A991F3"
+home_symbol = "⌂"
+truncation_length = 2
+truncation_symbol = "□ "
+read_only = " ◈"
+use_os_path_sep = true
+format = '[$path]($style)[$read_only]($read_only_style)'
+repo_root_style = 'fg:#A991F3'
+repo_root_format = '[$before_root_path]($before_repo_root_style)[$repo_root]($repo_root_style)[$path]($style)[$read_only]($read_only_style) '
+
 
 [character]
-success_symbol = "[❯](purple)"
-error_symbol = "[❯](red)"
-vimcmd_symbol = "[❮](green)"
+format = "$symbol  "
+success_symbol = "[◎](fg:#f9ba86)"
+error_symbol = "[○](italic purple)"
+vimcmd_symbol = "[■](italic dimmed green)"
+# not supported in zsh
+vimcmd_replace_one_symbol = "◌"
+vimcmd_replace_symbol = "□"
+vimcmd_visual_symbol = "▼"
 
 [git_branch]
-format = "[$branch]($style)"
-style = "bright-black"
+format = " [$branch(:$remote_branch)]($style)"
+style = "fg:#f9ba86"
+symbol = "[△](bold italic bright-blue)"
+truncation_symbol = "⋯"
+truncation_length = 11
+only_attached = true
 
 [git_status]
-format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)](218) ($ahead_behind$stashed)]($style)"
-style = "cyan"
+style = "bold italic bright-blue"
+format = "([⎪$ahead_behind$staged$modified$untracked$renamed$deleted$conflicted$stashed⎥]($style))"
+conflicted = "[◪◦](italic bright-magenta)"
+ahead = "[▴│[${count}](bold white)│](italic green)"
+behind = "[▿│[${count}](bold white)│](italic red)"
+diverged = "[◇ ▴┤[${ahead_count}](regular white)│▿┤[${behind_count}](regular white)│](italic bright-magenta)"
+untracked = "[◌◦](italic bright-yellow)"
+stashed = "[◃◈](italic white)"
+modified = "[●◦](italic yellow)"
+staged = "[▪┤[$count](bold white)│](italic bright-cyan)"
+renamed = "[◎◦](italic bright-blue)"
+deleted = "[✕](italic red)"
 
 [git_state]
 format = '\([$state( $progress_current/$progress_total)]($style)\) '
 style = "bright-black"
 
 [git_metrics]
-added_style = 'bold green'
+added_style = 'fg:#58dd90'
+deleted_style = 'fg:#f5306B'
 format = ' [+$added]($added_style) / [-$deleted]($deleted_style) '
 disabled = false
 
 [cmd_duration]
-format = "[$duration]($style) "
-style = "yellow"
+format = "[◄ $duration ](italic white)"
 
 [python]
 format = "[$virtualenv]($style) "
 style = "bright-black"
+
+[jobs]
+format = "[$symbol$number]($style) "
+style = "white"
+symbol = "[▶](blue italic)"
+
+[localip]
+ssh_only = true
+format = " ◯[$localipv4](bold magenta)"
+disabled = false
+
+[time]
+disabled = false
+format = "[ $time]($style)"
+time_format = "%R"
+utc_time_offset = "local"
+style = "italic dimmed white"
+
+[battery]
+format = "[ $percentage $symbol]($style)"
+full_symbol = "█"
+charging_symbol = "[↑](italic bold green)"
+discharging_symbol = "↓"
+unknown_symbol = "░"
+empty_symbol = "▃"
+
+[[battery.display]]
+threshold = 20
+style = "italic bold red"
+
+[[battery.display]]
+threshold = 60
+style = "italic dimmed bright-purple"
+
+[[battery.display]]
+threshold = 70
+style = "italic dimmed yellow"
+
+[nodejs]
+format = " [node](italic) [◫ ($version)](bold bright-green)"
+version_format = "${raw}"
+detect_files = ["package-lock.json", "yarn.lock"]
+detect_folders = ["node_modules"]
+detect_extensions = []
+
+[rust]
+format = " [$symbol$version]($style)"
+symbol = "🦀 "
+version_format = "${raw}"
+style = "bold red"
+
+[package]
+format = " [$symbol$version]($style)"
+version_format = "${raw}"
+symbol = "📦 "
+style = "fg:#f9ba86 bold"
