--- a/alacritty/.alacritty.toml
+++ b/alacritty/.alacritty.toml
@@ -1,31 +1,31 @@
-# github Alacritty Colors
+# Colors (Ayu Dark)
 
 # Default colors
 [colors.primary]
-background = '#0d1117'
-foreground = '#b3b1ad'
+background = '#0F1419'
+foreground = '#B3B1AD'
 
 # Normal colors
 [colors.normal]
-black   = '#484f58'
-red     = '#ff7b72'
-green   = '#3fb950'
-yellow  = '#d29922'
-blue    = '#58a6ff'
-magenta = '#bc8cff'
-cyan    = '#39c5cf'
-white   = '#b1bac4'
+black = '#01060E'
+red = '#EA6C73'
+green = '#91B362'
+yellow = '#F9AF4F'
+blue = '#53BDFA'
+magenta = '#FAE994'
+cyan = '#90E1C6'
+white = '#C7C7C7'
 
 # Bright colors
 [colors.bright]
-black   = '#6e7681'
-red     = '#ffa198'
-green   = '#56d364'
-yellow  = '#e3b341'
-blue    = '#79c0ff'
-magenta = '#d2a8ff'
-cyan    = '#56d4dd'
-white   = '#f0f6fc'
+black = '#686868'
+red = '#F07178'
+green = '#C2D94C'
+yellow = '#FFB454'
+blue = '#59C2FF'
+magenta = '#FFEE99'
+cyan = '#95E6CB'
+white = '#FFFFFF'
 
 [[colors.indexed_colors]]
 index = 16
