Fix edge flags, use black bg in nvim

--- a/flatpaks/.var/app/com.microsoft.Edge/config/edge-flags.conf
+++ b/flatpaks/.var/app/com.microsoft.Edge/config/edge-flags.conf
@@ -1,13 +1,9 @@
 --ozone-platform-hint=auto
 --ozone-platform=wayland
 --gtk-version=4
+--use-gl=angle
 --ignore-gpu-blocklist
---enable-features=UseOzonePlatform
---enable-features=TouchpadOverscrollHistoryNavigation
---enable-features=AcceleratedVideoDecodeLinuxGL
---enable-features=VaapiVideoDecoder,VaapiVideoEncoder,CanvasOopRasterization
---enable-features=WaylandPerSurfaceScale
---enable-features=WaylandUiScale
---enable-features=VaapiIgnoreDriverChecks,VaapiVideoDecodeLinuxGL,AcceleratedVideoDecodeLinuxZeroCopyGL,VaapiOnNvidiaGPUs
+--enable-gpu-rasterization
+--enable-features=UseOzonePlatform,TouchpadOverscrollHistoryNavigation,AcceleratedVideoDecodeLinuxGL,VaapiVideoDecoder,VaapiVideoEncoder,CanvasOopRasterization,WaylandPerSurfaceScale,WaylandUiScale,VaapiIgnoreDriverChecks,VaapiVideoDecodeLinuxGL,AcceleratedVideoDecodeLinuxZeroCopyGL,VaapiOnNvidiaGPUs,AcceleratedVideoEncoder
 --disable-features=UseChromeOSDirectVideoDecoder
 --disable-gpu-driver-bug-workarounds
