Fix edge flags, move to binstall cuz installs got failed recently

--- a/flatpaks/.var/app/com.microsoft.Edge/config/edge-flags.conf
+++ b/flatpaks/.var/app/com.microsoft.Edge/config/edge-flags.conf
@@ -4,6 +4,6 @@
 --use-gl=angle
 --ignore-gpu-blocklist
 --enable-gpu-rasterization
---enable-features=UseOzonePlatform,TouchpadOverscrollHistoryNavigation,AcceleratedVideoDecodeLinuxGL,VaapiVideoDecoder,VaapiVideoEncoder,CanvasOopRasterization,WaylandPerSurfaceScale,WaylandUiScale,VaapiIgnoreDriverChecks,VaapiVideoDecodeLinuxGL,AcceleratedVideoDecodeLinuxZeroCopyGL,VaapiOnNvidiaGPUs,AcceleratedVideoEncoder
+--enable-features=UseOzonePlatform,TouchpadOverscrollHistoryNavigation,AcceleratedVideoDecodeLinuxGL,VaapiVideoDecoder,VaapiVideoEncoder,CanvasOopRasterization,WaylandPerSurfaceScale,WaylandUiScale,VaapiIgnoreDriverChecks,VaapiVideoDecodeLinuxGL,AcceleratedVideoDecodeLinuxZeroCopyGL,AcceleratedVideoEncoder
 --disable-features=UseChromeOSDirectVideoDecoder
 --disable-gpu-driver-bug-workarounds
