--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -12,7 +12,6 @@
       "provider": "ollama",
       "model": "qwen3:14b"
     },
-    "version": "2"
   },
   "telemetry": {
     "metrics": false,
@@ -42,7 +41,7 @@
   "vim_mode": true,
   "ui_font_size": 16,
   "buffer_font_size": 14,
-  "buffer_font_family": "UbuntuMono Nerd Font Propo",
+  "buffer_font_family": "Sono",
   "buffer_font_weight": 500,
   "buffer_line_height": "standard",
   "theme": {
