Update config for hyprland

--- a/hypr/.config/hypr/conf/autostart.conf
+++ b/hypr/.config/hypr/conf/autostart.conf
@@ -2,8 +2,8 @@
 ### AUTOSTART ###
 #################
 
+exec-once = uwsm app -- hypridle
+exec-once = uwsm app -- waybar
 exec-once = hypridle
-exec-once = walker --gapplication-service
-exec-once = waybar
-exec-once = wl-clip-persist --clipboard regular --all-mime-type-regex '^(?!x-kde-passwordManagerHint).+'
+exec-once = wl-clip-persist --clipboard regular
 
