--- a/lazygit/.config/lazygit/config.yml
+++ b/lazygit/.config/lazygit/config.yml
@@ -1,3 +1,3 @@
 git:
   pagers:
-    - externalDiffCommand: difft --color=always
+    - externalDiffCommand: difft --color=always --display=inline --syntax-highlight=on --tab-width=2
