Add jovian back for zotac zone

--- a/zed/.config/zed/settings_backup.json
+++ b/zed/.config/zed/settings_backup.json
@@ -7,14 +7,7 @@
 // custom settings, run `zed: open default settings` from the
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
-  "session": {
-    "trust_all_worktrees": false
-  },
-  "icon_theme": {
-    "mode": "system",
-    "light": "Zed (Default)",
-    "dark": "Zed (Default)"
-  },
+  "icon_theme": "Zed (Default)",
   "agent": {
     "default_model": {
       "provider": "ollama",
@@ -58,7 +51,7 @@
     "dark": "One Dark"
   },
   "base_keymap": "VSCode",
-  "relative_line_numbers": "enabled",
+  "relative_line_numbers": true,
   "lsp": {
     "rust-analyzer": {
       "initialization_options": {
