--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,3 +1,3 @@
-theme = dark:GitHub Dark Default,light:GitHub Light Default
+theme = dark:Gruvbox Dark,light:Gruvbox Light
 font-family = Jetbrains Mono
 font-size = 12
