Change theme and add more nixvim lsp

--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,3 +1,3 @@
-theme = dark:Gruvbox Dark,light:Gruvbox Light
+theme = dark:Catppuccin Mocha,light:Catppuccin Latte
 font-family = Jetbrains Mono
 font-size = 12
