feat: enhance NixOS configuration with DankMaterialShell and improve security settings

--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,3 +1,8 @@
 theme = dark:Catppuccin Mocha,light:Catppuccin Latte
 font-family = Jetbrains Mono
 font-size = 12
+
+cursor-style = block
+cursor-style-blink = true
+
+background-opacity = 0.9
